--- a/settings.json
+++ b/settings.json
@@ -6,5 +6,23 @@
         "lr_gen": 0.0001,
         "lr_disc": 0.0001,
         "output_dim": 2
+    },
+
+    "factor_definition": {
+        "num_machines": {
+            "lower_bound": 1,
+            "upper_bound": 5,
+            "discrete": true,
+            "mixture": false,
+            "num_mixture_components": 0
+        },
+        "buffer_size": {
+            "name": "buffer_size",
+            "lower_bound": 1,
+            "upper_bound": 5,
+            "discrete": true,
+            "mixture": false,
+            "num_mixture_components": 0
+        }
     }
 }
